# Drone-Control

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
Arduinocode/esc_motors/: esc_motors.ino
launch/: a.launch
src/: aaa.qrc  dronecontrol.pro  dronecontrol.pro.user.3.2-pre1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rosthread.cpp  rosthread.h
